Support recommanded content setting policies

Some content settings preferences should only created by policies which could be at recommanded level.

Bug: 773791
Change-Id: I478db5d9f16ded0cdc049f05756954b4a9641e96
Reviewed-on: https://chromium-review.googlesource.com/713744
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508349}